Don't use deprecated Number constructors